# internal/models/delete_vm_snapshot_response.go
@@ -1,0 +1,11 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+// DeleteVMSnapshotResponse delete VM snapshot response
+//
+// swagger:model DeleteVMSnapshotResponse
+type DeleteVMSnapshotResponse interface{}
