# internal/models/list_private_vm_images_response_private_image.go
@@ -1,0 +1,62 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ListPrivateVMImagesResponsePrivateImage list private VM images response private image
+//
+// swagger:model ListPrivateVMImagesResponse.PrivateImage
+type ListPrivateVMImagesResponsePrivateImage struct {
+
+	// data center Id
+	DataCenterID string `json:"dataCenterId,omitempty"`
+
+	// description
+	Description string `json:"description,omitempty"`
+
+	// id
+	ID string `json:"id,omitempty"`
+
+	// project Id
+	ProjectID string `json:"projectId,omitempty"`
+
+	// size gib
+	SizeGib int32 `json:"sizeGib,omitempty"`
+}
+
+// Validate validates this list private VM images response private image
+func (m *ListPrivateVMImagesResponsePrivateImage) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this list private VM images response private image based on context it is used
+func (m *ListPrivateVMImagesResponsePrivateImage) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ListPrivateVMImagesResponsePrivateImage) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ListPrivateVMImagesResponsePrivateImage) UnmarshalBinary(b []byte) error {
+	var res ListPrivateVMImagesResponsePrivateImage
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
