# internal/models/v1_private_image.go
@@ -1,0 +1,62 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// V1PrivateImage v1 private image
+//
+// swagger:model v1.PrivateImage
+type V1PrivateImage struct {
+
+	// data center Id
+	DataCenterID string `json:"dataCenterId,omitempty"`
+
+	// description
+	Description string `json:"description,omitempty"`
+
+	// id
+	ID string `json:"id,omitempty"`
+
+	// project Id
+	ProjectID string `json:"projectId,omitempty"`
+
+	// size gib
+	SizeGib int32 `json:"sizeGib,omitempty"`
+}
+
+// Validate validates this v1 private image
+func (m *V1PrivateImage) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this v1 private image based on context it is used
+func (m *V1PrivateImage) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *V1PrivateImage) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *V1PrivateImage) UnmarshalBinary(b []byte) error {
+	var res V1PrivateImage
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
